--- a/app/src/main/res/layout/layout_keyboard_view.xml
+++ b/app/src/main/res/layout/layout_keyboard_view.xml
@@ -15,6 +15,7 @@
    limitations under the License.
 -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal|bottom"
@@ -27,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:focusable="true"
-        android:padding="@dimen/keyboard_view_padding" />
+        android:padding="@dimen/keyboard_view_padding"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </FrameLayout>
