--- a/app/src/main/res/xml/keyboard_qwerty.xml
+++ b/app/src/main/res/xml/keyboard_qwerty.xml
@@ -31,8 +31,7 @@
         <Key
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_gap"
             app:keyLabel="e"
-            app:popupCharacters="@string/alternates_for_e"
-            app:popupKeyboard="@xml/keyboard_popup" />
+            app:popupCharacters="@string/alternates_for_e" />
         <Key
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_gap"
             app:keyLabel="r" />
@@ -42,23 +41,19 @@
         <Key
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_gap"
             app:keyLabel="y"
-            app:popupCharacters="@string/alternates_for_y"
-            app:popupKeyboard="@xml/keyboard_popup" />
+            app:popupCharacters="@string/alternates_for_y" />
         <Key
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_gap"
             app:keyLabel="u"
-            app:popupCharacters="@string/alternates_for_u"
-            app:popupKeyboard="@xml/keyboard_popup" />
+            app:popupCharacters="@string/alternates_for_u" />
         <Key
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_gap"
             app:keyLabel="i"
-            app:popupCharacters="@string/alternates_for_i"
-            app:popupKeyboard="@xml/keyboard_popup" />
+            app:popupCharacters="@string/alternates_for_i" />
         <Key
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_gap"
             app:keyLabel="o"
-            app:popupCharacters="@string/alternates_for_o"
-            app:popupKeyboard="@xml/keyboard_popup" />
+            app:popupCharacters="@string/alternates_for_o" />
         <Key
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_gap"
             app:keyLabel="p" />
@@ -74,13 +69,11 @@
         <Key
             app:keyHorizontalGap="@dimen/keyboard_half_key_size"
             app:keyLabel="a"
-            app:popupCharacters="@string/alternates_for_a"
-            app:popupKeyboard="@xml/keyboard_popup" />
+            app:popupCharacters="@string/alternates_for_a" />
         <Key
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_gap"
             app:keyLabel="s"
-            app:popupCharacters="@string/alternates_for_s"
-            app:popupKeyboard="@xml/keyboard_popup" />
+            app:popupCharacters="@string/alternates_for_s" />
         <Key
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_gap"
             app:keyLabel="d" />
@@ -102,8 +95,7 @@
         <Key
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_gap"
             app:keyLabel="l"
-            app:popupCharacters="@string/alternates_for_l"
-            app:popupKeyboard="@xml/keyboard_popup" />
+            app:popupCharacters="@string/alternates_for_l" />
         <Key
             app:codes="@integer/keycode_enter"
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_gap"
@@ -117,16 +109,14 @@
         <Key
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_gap"
             app:keyLabel="z"
-            app:popupCharacters="@string/alternates_for_z"
-            app:popupKeyboard="@xml/keyboard_popup" />
+            app:popupCharacters="@string/alternates_for_z" />
         <Key
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_gap"
             app:keyLabel="x" />
         <Key
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_gap"
             app:keyLabel="c"
-            app:popupCharacters="@string/alternates_for_c"
-            app:popupKeyboard="@xml/keyboard_popup" />
+            app:popupCharacters="@string/alternates_for_c" />
         <Key
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_gap"
             app:keyLabel="v" />
@@ -136,8 +126,7 @@
         <Key
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_gap"
             app:keyLabel="n"
-            app:popupCharacters="@string/alternates_for_n"
-            app:popupKeyboard="@xml/keyboard_popup" />
+            app:popupCharacters="@string/alternates_for_n" />
         <Key
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_gap"
             app:keyLabel="m" />
