--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,7 @@
         <item name="fontFamily">sans-serif</item>
         <item name="textStyle">normal</item>
         <item name="useKeyPreview">true</item>
+        <item name="android:background">@null</item>
         <item name="android:longClickable">true</item>
         <item name="labelTextSize">@dimen/keyboard_view_key_text_size</item>
         <item name="keyTextColorPrimary">?android:textColorPrimary</item>
